fixing more layout bugs in mobile view

--- a/kareem-portfolio/src/styles/projects.scss
+++ b/kareem-portfolio/src/styles/projects.scss
@@ -9,6 +9,7 @@
 .project-view-wrapper {
   background-color: $secondary-olive;
   padding: 5%;
+  min-height: 100%;
 
   & .project-img {
     display: flex;
