--- a/kareem-portfolio/src/styles/skills.scss
+++ b/kareem-portfolio/src/styles/skills.scss
@@ -4,7 +4,7 @@
   padding: 5%;
   position: absolute;
   background-color: $tertiary-beige;
-  height: 92%;
+  min-height: 100%;
   width: 100%;
 
   & img {
